# acroform-rs-lopdf

./: .gitignore  ACROFORM_REWRITE.md  AGENTS.md  Cargo.toml  Makefile  PYTHON_BINDINGS.md  README.md  pyproject.toml  release.toml  x.py
.github/workflows/: ci.yml  publish.yml
acroform/: Cargo.toml  README.md
acroform-lopdf/: README.md
acroform-lopdf/examples/: explore_fields.rs  explore_widgets.rs  in_memory_fill.rs  simple_fill.rs
acroform-lopdf/src/: api.rs  field.rs  lib.rs
acroform-lopdf/tests/: integration_test.rs  test_default_value_update.rs
acroform-rs-old/: .gitignore  FIXES.md
acroform-rs-old/acroform/examples/: in_memory_fill.rs  simple_fill.rs
acroform-rs-old/acroform/src/: api.rs  field.rs  lib.rs
acroform-rs-old/designs/: IMPLEMENTATION.md  INVESTIGATE.md
acroform-rs-old/examples/: Cargo.toml
acroform-rs-old/pdf/src/: file.rs
acroform-rs-old/pdf_derive/: Cargo.toml
acroform/tests/: integration_test.rs  pdf_15_plus_test.rs  widget_annotation_test.rs
designs/: PLAN.md
examples/: in_memory_fill.rs  simple_fill.rs
pdf/: Cargo.toml
pdf/fuzz/: Cargo.toml
pdf/src/: xref.rs
pdf/src/object/: types.rs
python/acroform/: README.md  __init__.py  __init__.pyi
python/examples/: in_memory_fill.py  simple_fill.py
python/pdf_forms/: README.md  __init__.py  cli.py
python/tests/: test_acroform.py
src/: api.rs  lib.rs  python.rs
tests/: integration_test.rs  test_default_value_update.rs
