[package]
name = "acroform-lopdf"
version = "0.1.0"
authors = ["acroform-rs contributors"]
repository = "https://github.com/nibsbin/acroform-rs-lopdf"
keywords = ["pdf", "acroform", "form"]
license = "MIT"
edition = "2021"
description = "High-level PDF form manipulation library using lopdf"

[dependencies]
lopdf = "0.38.0"

[dev-dependencies]
