[package]
name = "acroform"
version = "0.2.2"
authors = ["acroform-rs contributors"]
repository = "https://github.com/nibsbin/acroform-rs-lopdf"
keywords = ["pdf", "acroform", "form"]
license = "MIT"
edition = "2021"
description = "High-level PDF form manipulation library using lopdf"

[lib]
name = "acroform"
crate-type = ["rlib", "cdylib"]

[dependencies]
lopdf = "0.38.0"
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }

[features]
default = []
python-bindings = ["pyo3"]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
