[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "acroform"
version = "0.2.0"
description = "High-level PDF form manipulation library - Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "acroform-rs contributors" }
]
keywords = ["pdf", "acroform", "form", "fill", "pdf-form"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "maturin", "mypy", "ruff"]

[project.scripts]
pdf-forms = "pdf_forms.cli:main"

[project.urls]
Homepage = "https://github.com/nibsbin/acroform-rs-lopdf"
Repository = "https://github.com/nibsbin/acroform-rs-lopdf"
Documentation = "https://github.com/nibsbin/acroform-rs-lopdf/blob/main/README.md"

[tool.maturin]
features = ["python-bindings"]
module-name = "acroform._acroform"
python-source = "python"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
