[package]
name = "pdf-examples"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acroform-pdf = { path = "../pdf" }
acroform = { path = "../acroform" }
datasize = "0.2.13"
clap = { version = "*", features = ["derive"] }
image = "*"

[[bin]]
name = "extract_page"
