[package]
name = "acroform-pdf-derive"
version.workspace = true
authors = ["Erlend Langseth <3rlendhl@gmail.com>", "Sebastian Köln <s3bk@protonmail.com>"]
homepage = "https://github.com/nibsbin/acroform-rs"
repository = "https://github.com/nibsbin/acroform-rs"
description = "Derive macros for acroform-pdf crate (fork of pdf_derive)"
license = "MIT"
edition.workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
quote = "1"

[lib]
proc-macro = true
name = "pdf_derive"
